# synapse-middleware

./: LICENSE  README.md
src/client/: .classpath  .project  javahConfig.xml  libEmokit.dylib
src/client/.externalToolBuilders/: javah Ant builder.launch
src/client/javah/: a.out  contact.c  contact.c~  contact_standalone  contact_standalone.c  contact_standalone.c~  headsets_epoc_EpocConnector.h~  libEmokit.dylib
src/client/javah/emokit/: emokit.h.gch
src/client/lib/emokit-c-master/: CMakeCache.txt  Makefile  cmake_install.cmake
src/client/lib/emokit-c-master/examples/contact/: #headsets_epoc_EpocConnector.h#  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  contact.c  contact.c~  headsets_epoc_EpocConnector.h
src/client/src/core/: ClientMain.java  ClientTester.java  HeadsetInfo.java  ServerConnection.java  ServerConnectionException.java  SynapseException.java
src/client/src/headsets/: HeadsetConnectionException.java  HeadsetConnector.java
src/demoApplication/: .project
src/demoApplication/android/: build.gradle
src/demoApplication/resources/models/: fbx-conv-mac  step_0.fbx  step_1.fbx  step_10.fbx  step_2.fbx  step_3.fbx  (+6 more)
src/misc/Java serial multiple MW code/: Connector.java  MConnector.java  MindWaveListener.java
src/racingApplication/: build.gradle
src/racingApplication/android/: AndroidManifest.xml  build.gradle
src/racingApplication/desktop/: build.gradle
src/racingApplication/html/: build.gradle
src/racingApplication/ios/: build.gradle  robovm.properties
src/server/: .project
src/server/src/: .project
(+67 files in other folders)
